--- a/content.css
+++ b/content.css
@@ -74,3 +74,26 @@ footer p {
 	margin: 0;
 	font-size: 1rem;
 }
+
+@media only screen and (max-width: 600px) {
+    main {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    aside,
+    section {
+      flex: none;
+      margin: 1em 0;
+      width: 100%;
+    }
+  
+    nav {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    nav a {
+      margin: 1em;
+    }
+  }
